completed basic functionality

--- a/Brick Breaker/index.html
+++ b/Brick Breaker/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <b><h1 id= "score">0</h1></b>
     <div class="grid"></div>
         
 <script src="app.js"></script>
